# kwin_impanel

./: CMakeLists.txt  README.md
package/: metadata.desktop
package/contents/ui/: InputPanel.qml  main.qml
